Installed the dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "name": "develop",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "Server.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/Server.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.2.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
