--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sequelize": "^6.2.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "sequelize-cli": "^6.1.0"
   }
 }
